--- a/public/index.css
+++ b/public/index.css
@@ -7,13 +7,56 @@
   --font-primary: #fff;
   --font-secondary: #c2c2c2;
 }
-
 * {
   margin: 0;
   padding: 0;
 }
-
 body {
   background-color: var(--primary);
   color: var(--font-primary);
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+header {
+  font-size: 2em;
+  text-align: center;
+  margin: 8px 0;
+}
+body > section {
+  flex-grow: 1;
+}
+footer {
+  justify-self: flex-end;
+}
+button,
+.button {
+  border: 1px solid black;
+  border-radius: 8px;
+  padding: 8px;
+  margin: 8px;
+  background-color: var(--secondary);
+  color: var(--font-primary);
+  font-family: auto;
+  font-size: inherit;
+  text-decoration: none;
+  transition: all 0.1s ease-in;
+  user-select: none;
+  cursor: pointer;
+}
+button:hover,
+.button:hover {
+  box-shadow: 0 0 8px 4px var(--independence);
+}
+button:active,
+.button:active {
+  box-shadow: 0 0 5px 7px var(--independence);
+  background-color: var(--alert);
+}
+
+.create-lobby {
+  display: flex;
+  justify-content: center;
+  margin-top: 24px;
 }
