--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,79 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+:root {
+  --primary: #293132;
+  --dark-liver: #474044;
+  --independence: #4f5165;
+  --secondary: #547aa5;
+  --alert: #50d8d7;
+  --font-primary: #fff;
+  --font-secondary: #c2c2c2;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+* {
+  box-sizing: border-box;
+}
+
+html,
+body {
+  padding: 0;
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+}
+body {
+  background-color: black;
+  color: white;
+}
+@media screen and (prefers-color-scheme: light) {
+  body {
+    background-color: white;
+    color: black;
+  }
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+button,
+.button {
+  border: 1px solid black;
+  border-radius: 8px;
+  padding: 8px;
+  margin: 8px;
+  background-color: var(--secondary);
+  color: var(--font-primary);
+  font-family: auto;
+  font-size: inherit;
+  text-decoration: none;
+  transition: all 0.1s ease-in;
+  user-select: none;
+  cursor: pointer;
+}
+button:hover,
+.button:hover {
+  box-shadow: 0 0 8px 4px var(--independence);
+}
+button:active,
+.button:active {
+  box-shadow: 0 0 5px 7px var(--independence);
+  background-color: var(--alert);
+}
+
+input[type='text'] {
+  background-color: transparent;
+  border: none;
+  border-bottom: 1px solid white;
+  color: white;
+  transition: 0.1s all ease-in;
+}
+input[type='text']:focus {
+  outline: none;
+  /* box-shadow: 0px 13px 16px -7px white; */
+  box-shadow: 0px 2px 0 0 white;
+}
+
+.container {
+  max-width: 800px;
+  margin: auto;
 }
